; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = vshogi
version = 0.1.0
description = Shogi API for shogi and its variants
url = https://github.com/ctgk/vshogi
author = ctgk
author_email = r1135nj54w@gmail.com
license = GPLv3
license_file = LICENSE

[options]
python_requires = >=3.7
install_requires =
    Cython
    numpy

[options.extras_require]
develop =
    gym
    pre-commit
    pytest
