; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = vshogi
version = 0.0.1
description = Shogi API for shogi and its variants
url = https://github.com/ctgk/vshogi
author = ctgk
author_email = r1135nj54w@gmail.com
license = GPLv3
license_file = LICENSE

[options]
python_requires = >=3.7
install_requires =
packages = find:
package_dir =
    =python

[options.packages.find]
where = python
include = vshogi*
exclude = test*

[options.extras_require]
develop =
    pre-commit
    pybind11
    pytest
