; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = vshogi
version = 0.0.2
description = Shogi API for Shogi and its variants
url = https://github.com/ctgk/vshogi
author = ctgk
author_email = r1135nj54w@gmail.com
license = GPLv3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
install_requires =
    numpy
    scipy
packages = find:
package_dir =
    =python

[options.packages.find]
where = python
include = vshogi*
exclude = test*

[options.extras_require]
develop =
    pre-commit
    pybind11
    pytest

    # format
    flake8
    flake8-absolute-import
    flake8-broken-line
    flake8-builtins
    flake8-commas
    flake8-docstrings
    flake8-import-order
    flake8-multiline-containers
    flake8-mutable
    pep8-naming

dlshogi =
    classopt
    joblib
    pandas
    tensorflow!=2.16.1
    tqdm

[flake8]
exclude =
    examples/*.py
ignore =
    ; Ignore "Missing docstring in magic method"
    D105,
    ; Ignore "undefined name ..."
    F821,
    ; Ignore "line break before binary operator"
    W503
per-file-ignores =
    ; Ignore 'Missing docstring in public module'
    setup.py:D100
    ; Ignore 'Missing docstring in public module' and 'variable "copyright" is shadowing a python builtin'
    docs/conf.py:A001,D100
    ; Ignore missing docstring in public module, class, method, function, package
    **/tests/*.py:D100,D101,D102,D103,D104
    ; Ignore Multi-line container not broken after opening character
    python/vshogi/_game.py:JS101

application-import-names = vshogi

; https://github.com/PyCQA/flake8-import-order/blob/master/tests/test_cases/complete_pycharm.py
import-order-style = pycharm
